Ready to deploy

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <h1>Tic-Tac-Toe</h1>
 
     <div id="symbol-selection">
-        <h1>Choose Your Symbol <br></h1>
-
+      <h2>Choose Your Symbol</h2>
+      <div id="button-container">
         <button class="symbol-button" id="choose-X">X</button>
         <button class="symbol-button" id="choose-O">O</button>
+      </div>
     </div>
 
     <div id="board" class="hidden">
